# g360-cli

./: .gitignore  .npmignore  AGENTS-UIUX.md  ANALISIS-REPOSITORIO.md  API-DOCUMENTATION.md  FLET-DESKTOP-FEEDBACK.md  G360-CLI-SKILL.md  MEJORAS-IMPLEMENTADAS.md  README.md  opencode-config.json  package-lock.json  package.json  vitest.config.js
.antigravitycli/: 1fccff0c-f99d-489d-b556-054471c4cc3d.json
py/: pyproject.toml  requirements.txt
py/src/g360_core/: __init__.py  batch_processor.py  commercial_engine.py  logger.py  pipeline.py  processor.py  processor_segmentacion.py  processor_sku.py  scanner.py  utils.py
py/src/g360_core/flet/: __init__.py  ingestion_panel.py
src/: cli.js
src/assets/brand/: brand.json
src/assets/brand/g360/logotypes/: logo_g360_dark_b64.txt  logo_g360_light_b64.txt
src/assets/components/: G360DragModal.jsx  G360Signature.jsx
src/assets/config/: g360-skills.json  project-types.json  skills.json
src/assets/engine/: g360-data-validator.js  g360-engine.js  g360-field-mapper.js  g360-skill-audit.mjs  g360-skill-meta-evaluator.mjs
src/assets/ingestion/core/: ingestion.py
src/assets/signature/: index.js
src/assets/signature/g360_flet/: __init__.py  g360_signature.py
src/assets/snippets/: snippets.json
src/assets/templates/lit-web/: index.html  package.json
src/assets/templates/lit-web/src/: index.js
src/assets/templates/python-cli/: .gitignore  build-portable.bat  package.json  run-portable.bat  setup.bat
src/assets/templates/python-cli/src/: main.py
src/assets/templates/python-customtkinter/: .gitignore  README.md  build-portable.bat  build.bat  create_shortcut.vbs  pyproject.toml  run.bat
src/assets/templates/python-customtkinter/src/: main.py
src/assets/templates/python-customtkinter/src/core/: g360_theme.py  skill.json
src/assets/templates/python-flet/: README.md  build-portable.bat  create_shortcut.vbs  pyproject.toml  requirements.txt  run.bat
src/assets/templates/python-flet-migrate/: README.md  build-portable.bat  build.bat  create_shortcut.vbs  pyproject.toml  run.bat
src/assets/templates/python-flet-migrate/src/: main.py  migrate_tkinter.py
src/assets/templates/python-flet-migrate/src/core/: skill.json
src/assets/templates/python-flet/src/: main.py  test_app.py  test_ingestion.py
src/assets/templates/python-flet/src/core/: g360_theme.py  skill.json
src/assets/templates/python-flet/src/ui/: ingestion_panel.py
src/assets/templates/solid-web/: .gitignore  index.html  package.json  vite.config.js
src/assets/templates/svelte-web/: .gitignore  package.json
src/assets/templates/web-pwa/: app.js  index.html  package.json  styles.css
src/commands/: addon.js  addon.test.js  audit.js  audit.test.js  bring.js  bring.test.js  clean.js  convert.js  health.js  ingest.js  init.js  init.test.js  list.js  list.test.js  present.js  scan.js  set-skill.js  set-skill.test.js  signature.js  update.js  validate.js
src/lib/: asset-validator.js  asset-validator.test.js  assets.js  auditor.js  checksum.js  config.js  global-config.js  i18n.js  logger.js  manifest.js  manifest.test.js  offline.js  presenter.js  progress.js  python_runner.js  rollback.js  theme.js  validator.js  validator.test.js
src/schemas/: skills-schema.json  snippets-schema.json
(+22 files in other folders)
