[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "g360-core"
version = "0.1.0"
description = "G360 ERP data ingestion engine — normalize .xls/.xlsx from SAP, StarSoft, Spring"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "ccusi", email = "ccusi@cipsa.com.pe" },
]
keywords = ["g360", "erp", "data", "normalization", "flet"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
]

[project.optional-dependencies]
flet = ["flet>=0.25.0"]

[project.urls]
Homepage = "https://github.com/ccusi/g360-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/g360_core"]
