[project]
name = "g360-app"
version = "1.0.0"
description = "G360 Desktop Application (CustomTkinter)"
authors = [
    { name = "ccusi", email = "ccusi@cipsa.com.pe" },
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "customtkinter>=5.2.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
